# lmusic

./: Cargo.toml  Dioxus.toml
.github/workflows/: release.yamll  release.yml  windows.yml
assets/: home.css  main.css
src/: home.rs  main.rs  playback.rs  setting.rs
